wxc/include/ewxw/wxc_glue.h

/* wxCalendarEvent */
TClassDefExtend(wxCalendarEvent,wxCommandEvent)
void       wxCalendarEvent_GetDate( TSelf(wxCalendarEvent) _obj, void* _dte );
int        wxCalendarEvent_GetWeekDay( TSelf(wxCalendarEvent) _obj );
/* wxHelpEvent */
TClassDefExtend(wxHelpEvent,wxCommandEvent)
int        wxHelpEvent_GetLink( TSelf(wxHelpEvent) _obj, void* _ref );
void       wxHelpEvent_GetPosition( TSelf(wxHelpEvent) _obj, TPointOutVoid(_x,_y) );
int        wxHelpEvent_GetTarget( TSelf(wxHelpEvent) _obj, void* _ref );
int        wxHelpEvent_SetLink( TSelf(wxHelpEvent) _obj, void* link );
void       wxHelpEvent_SetPosition( TSelf(wxHelpEvent) _obj, TPoint(x,y) );
void       wxHelpEvent_SetTarget( TSelf(wxHelpEvent) _obj, void* target );
TBool      wxIdleEvent_MoreRequested( TSelf(wxIdleEvent) _obj );
void       wxIdleEvent_RequestMore( TSelf(wxIdleEvent) _obj, TBool needMore );
/* wxListEvent */
TClassDefExtend(wxListEvent,wxNotifyEvent)
TBool      wxListEvent_Cancelled( TSelf(wxListEvent) _obj );
int        wxListEvent_GetCode( TSelf(wxListEvent) _obj );
int        wxListEvent_GetColumn( TSelf(wxListEvent) _obj );
int        wxListEvent_GetData( TSelf(wxListEvent) _obj );
int        wxListEvent_GetImage( TSelf(wxListEvent) _obj );
int        wxListEvent_GetIndex( TSelf(wxListEvent) _obj );
void       wxListEvent_GetItem( TSelf(wxListEvent) _obj, TClassRef(wxListItem) _ref );
TStringLen wxListEvent_GetLabel( TSelf(wxListEvent) _obj, TStringOutVoid _buf );
int        wxListEvent_GetMask( TSelf(wxListEvent) _obj );
/*
int        wxListEvent_GetOldIndex( TSelf(wxListEvent) _obj );
int        wxListEvent_GetOldItem( TSelf(wxListEvent) _obj );
*/
void       wxListEvent_GetPoint( TSelf(wxListEvent) _obj, TPointOutVoid(_x,_y) );
TStringLen wxListEvent_GetText( TSelf(wxListEvent) _obj, TStringOutVoid _buf );
/* wxMutexLocker */
TClassDef(wxMutexLocker)

/* wxNavigationKeyEvent */
TClassDefExtend(wxNavigationKeyEvent,wxEvent)
void*      wxNavigationKeyEvent_GetCurrentFocus( TSelf(wxNavigationKeyEvent) _obj );
void       wxNavigationKeyEvent_SetCurrentFocus( TSelf(wxNavigationKeyEvent) _obj, TClass(wxWindow) win );
/* void       wxNavigationKeyEvent_SetPropagate( TSelf(wxNavigationKeyEvent) _obj, int bDoIt );*/
void       wxNavigationKeyEvent_SetWindowChange( TSelf(wxNavigationKeyEvent) _obj, int bIs );
int        wxNavigationKeyEvent_ShouldPropagate( TSelf(wxNavigationKeyEvent) _obj );
/* wxScrollEvent */
TClassDefExtend(wxScrollEvent,wxEvent)
int        wxScrollEvent_GetOrientation( TSelf(wxScrollEvent) _obj );
int        wxScrollEvent_GetPosition( TSelf(wxScrollEvent) _obj );
/* wxSpinEvent */
TClassDefExtend(wxSpinEvent,wxNotifyEvent)
int        wxSpinEvent_GetPosition( TSelf(wxSpinEvent) _obj );
void       wxSpinEvent_SetPosition( TSelf(wxSpinEvent) _obj, int pos );
/* wxTimerBase */
TClassDefExtend(wxTimerBase,wxObject)

/* wxTimerEvent */
TClassDefExtend(wxTimerEvent,wxEvent)
int        wxTimerEvent_GetInterval( TSelf(wxTimerEvent) _obj );
/* wxTreeEvent */
TClassDefExtend(wxTreeEvent,wxNotifyEvent)
int        wxTreeEvent_GetCode( TSelf(wxTreeEvent) _obj );
void       wxTreeEvent_GetItem( TSelf(wxTreeEvent) _obj, TClassRef(wxTreeItemId) _ref );
TStringLen wxTreeEvent_GetLabel( TSelf(wxTreeEvent) _obj, TStringOutVoid _buf );
void       wxTreeEvent_GetOldItem( TSelf(wxTreeEvent) _obj, TClassRef(wxTreeItemId) _ref );
void       wxTreeEvent_GetPoint( TSelf(wxTreeEvent) _obj, TPointOutVoid(_x,_y) );
/* wxWindowCreateEvent */
TClassDefExtend(wxWindowCreateEvent,wxCommandEvent)
TClass(wxWindow) wxWindowCreateEvent_GetWindow( TSelf(wxWindowCreateEvent) _obj );
/* wxWindowDestroyEvent */
TClassDefExtend(wxWindowDestroyEvent,wxCommandEvent)
TClass(wxWindow) wxWindowDestroyEvent_GetWindow( TSelf(wxWindowDestroyEvent) _obj );