wxcl/src/events/cffi/wxEvent.lisp


(defcfun ("wxNavigationKeyEvent_SetWindowChange" wxNavigationKeyEvent_SetWindowChange) :void
  (_obj :pointer)
  (bIs :int))

(defcfun ("wxNavigationKeyEvent_ShouldPropagate" wxNavigationKeyEvent_ShouldPropagate) :int
  (_obj :pointer))

(defcfun ("wxNavigationKeyEvent_GetCurrentFocus" wxNavigationKeyEvent_GetCurrentFocus) :pointer
  (_obj :pointer))

(defcfun ("wxNavigationKeyEvent_SetCurrentFocus" wxNavigationKeyEvent_SetCurrentFocus) :void
  (_obj :pointer)
  (win :pointer))

(defcfun ("wxWindowCreateEvent_GetWindow" wxWindowCreateEvent_GetWindow) :pointer
  (_obj :pointer))

(defcfun ("wxWindowDestroyEvent_GetWindow" wxWindowDestroyEvent_GetWindow) :pointer
  (_obj :pointer))

(defcfun ("wxIdleEvent_RequestMore" wxIdleEvent_RequestMore) :void
  (_obj :pointer)
  (needMore :int))

(defcfun ("wxIdleEvent_MoreRequested" wxIdleEvent_MoreRequested) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetCode" wxListEvent_GetCode) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetIndex" wxListEvent_GetIndex) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetColumn" wxListEvent_GetColumn) :int
  (_obj :pointer))

(defcfun ("wxListEvent_Cancelled" wxListEvent_Cancelled) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetPoint" wxListEvent_GetPoint) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(defcfun ("wxListEvent_GetLabel" wxListEvent_GetLabel) :int
  (_obj :pointer)
  (_buf :pointer))

(defcfun ("wxListEvent_GetText" wxListEvent_GetText) :int
  (_obj :pointer)
  (_buf :pointer))

(defcfun ("wxListEvent_GetImage" wxListEvent_GetImage) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetData" wxListEvent_GetData) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetMask" wxListEvent_GetMask) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetItem" wxListEvent_GetItem) :void
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("wxTreeEvent_GetItem" wxTreeEvent_GetItem) :void
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("wxTreeEvent_GetOldItem" wxTreeEvent_GetOldItem) :void
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("wxTreeEvent_GetPoint" wxTreeEvent_GetPoint) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(defcfun ("wxTreeEvent_GetCode" wxTreeEvent_GetCode) :int
  (_obj :pointer))

(defcfun ("wxTreeEvent_GetLabel" wxTreeEvent_GetLabel) :int
  (_obj :pointer)
  (_buf :pointer))

(defcfun ("wxSpinEvent_GetPosition" wxSpinEvent_GetPosition) :int
  (_obj :pointer))

(defcfun ("wxSpinEvent_SetPosition" wxSpinEvent_SetPosition) :void
  (_obj :pointer)
  (pos :int))

(defcfun ("wxTimerEvent_GetInterval" wxTimerEvent_GetInterval) :int
  (_obj :pointer))

(defcfun ("wxCalendarEvent_GetWeekDay" wxCalendarEvent_GetWeekDay) :int
  (_obj :pointer))

(defcfun ("wxCalendarEvent_GetDate" wxCalendarEvent_GetDate) :void
  (_obj :pointer)
  (_dte :pointer))

(defcfun ("wxScrollEvent_GetOrientation" wxScrollEvent_GetOrientation) :int
  (_obj :pointer))

(defcfun ("wxScrollEvent_GetPosition" wxScrollEvent_GetPosition) :int
  (_obj :pointer))

(defcfun ("wxHelpEvent_GetPosition" wxHelpEvent_GetPosition) :void
  (_obj :pointer)
  (x :pointer)
  (y :pointer))

(defcfun ("wxHelpEvent_SetPosition" wxHelpEvent_SetPosition) :void
  (_obj :pointer)
  (x :int)
  (y :int))

(defcfun ("wxHelpEvent_GetLink" wxHelpEvent_GetLink) :int
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("wxHelpEvent_SetLink" wxHelpEvent_SetLink) :void
  (_obj :pointer)
  (link :pointer))

(defcfun ("wxHelpEvent_GetTarget" wxHelpEvent_GetTarget) :int
  (_obj :pointer)
  (_ref :pointer))

(defcfun ("wxHelpEvent_SetTarget" wxHelpEvent_SetTarget) :void
  (_obj :pointer)
  (target :pointer))

(defcvar ("wxEVENT_COMMAND_BUTTON_CLICKED" wxEVENT_COMMAND_BUTTON_CLICKED)
 :int)

(defcvar ("wxEVENT_COMMAND_CHECKBOX_CLICKED" wxEVENT_COMMAND_CHECKBOX_CLICKED)
 :int)

(defcvar ("wxEVENT_COMMAND_CHOICE_SELECTED" wxEVENT_COMMAND_CHOICE_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_LISTBOX_SELECTED" wxEVENT_COMMAND_LISTBOX_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_LISTBOX_DOUBLECLICKED" wxEVENT_COMMAND_LISTBOX_DOUBLECLICKED)
 :int)

(defcvar ("wxEVENT_COMMAND_CHECKLISTBOX_TOGGLED" wxEVENT_COMMAND_CHECKLISTBOX_TOGGLED)
 :int)

(defcvar ("wxEVENT_COMMAND_TEXT_UPDATED" wxEVENT_COMMAND_TEXT_UPDATED)
 :int)

(defcvar ("wxEVENT_COMMAND_TEXT_ENTER" wxEVENT_COMMAND_TEXT_ENTER)
 :int)

(defcvar ("wxEVENT_COMMAND_MENU_SELECTED" wxEVENT_COMMAND_MENU_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_TOOL_CLICKED" wxEVENT_COMMAND_TOOL_CLICKED)
 :int)

(defcvar ("wxEVENT_COMMAND_SLIDER_UPDATED" wxEVENT_COMMAND_SLIDER_UPDATED)
 :int)

(defcvar ("wxEVENT_COMMAND_RADIOBOX_SELECTED" wxEVENT_COMMAND_RADIOBOX_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_RADIOBUTTON_SELECTED" wxEVENT_COMMAND_RADIOBUTTON_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_SCROLLBAR_UPDATED" wxEVENT_COMMAND_SCROLLBAR_UPDATED)
 :int)

(defcvar ("wxEVENT_COMMAND_VLBOX_SELECTED" wxEVENT_COMMAND_VLBOX_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_COMBOBOX_SELECTED" wxEVENT_COMMAND_COMBOBOX_SELECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_TOOL_RCLICKED" wxEVENT_COMMAND_TOOL_RCLICKED)
 :int)

(defcvar ("wxEVENT_COMMAND_TOOL_ENTER" wxEVENT_COMMAND_TOOL_ENTER)
 :int)

(defcvar ("wxEVENT_COMMAND_SPINCTRL_UPDATED" wxEVENT_COMMAND_SPINCTRL_UPDATED)
 :int)

(defcvar ("wxEVENT_SOCKET" wxEVENT_SOCKET)
 :int)

(defcvar ("wxEVENT_LEFT_DOWN" wxEVENT_LEFT_DOWN)
 :int)

(defcvar ("wxEVENT_LEFT_UP" wxEVENT_LEFT_UP)
 :int)

(defcvar ("wxEVENT_MIDDLE_DOWN" wxEVENT_MIDDLE_DOWN)
 :int)

(defcvar ("wxEVENT_MIDDLE_UP" wxEVENT_MIDDLE_UP)
 :int)

(defcvar ("wxEVENT_RIGHT_DOWN" wxEVENT_RIGHT_DOWN)
 :int)

(defcvar ("wxEVENT_RIGHT_UP" wxEVENT_RIGHT_UP)
 :int)

(defcvar ("wxEVENT_MOTION" wxEVENT_MOTION)
 :int)

(defcvar ("wxEVENT_ENTER_WINDOW" wxEVENT_ENTER_WINDOW)
 :int)

(defcvar ("wxEVENT_LEAVE_WINDOW" wxEVENT_LEAVE_WINDOW)
 :int)

(defcvar ("wxEVENT_LEFT_DCLICK" wxEVENT_LEFT_DCLICK)
 :int)

(defcvar ("wxEVENT_MIDDLE_DCLICK" wxEVENT_MIDDLE_DCLICK)
 :int)

(defcvar ("wxEVENT_RIGHT_DCLICK" wxEVENT_RIGHT_DCLICK)
 :int)

(defcvar ("wxEVENT_SET_FOCUS" wxEVENT_SET_FOCUS)
 :int)

(defcvar ("wxEVENT_KILL_FOCUS" wxEVENT_KILL_FOCUS)
 :int)

(defcvar ("wxEVENT_NC_LEFT_DOWN" wxEVENT_NC_LEFT_DOWN)
 :int)

(defcvar ("wxEVENT_NC_LEFT_UP" wxEVENT_NC_LEFT_UP)
 :int)

(defcvar ("wxEVENT_NC_MIDDLE_DOWN" wxEVENT_NC_MIDDLE_DOWN)
 :int)

(defcvar ("wxEVENT_NC_MIDDLE_UP" wxEVENT_NC_MIDDLE_UP)
 :int)

(defcvar ("wxEVENT_NC_RIGHT_DOWN" wxEVENT_NC_RIGHT_DOWN)
 :int)

(defcvar ("wxEVENT_NC_RIGHT_UP" wxEVENT_NC_RIGHT_UP)
 :int)

(defcvar ("wxEVENT_NC_MOTION" wxEVENT_NC_MOTION)
 :int)

(defcvar ("wxEVENT_NC_ENTER_WINDOW" wxEVENT_NC_ENTER_WINDOW)
 :int)

(defcvar ("wxEVENT_NC_LEAVE_WINDOW" wxEVENT_NC_LEAVE_WINDOW)
 :int)

(defcvar ("wxEVENT_NC_LEFT_DCLICK" wxEVENT_NC_LEFT_DCLICK)
 :int)

(defcvar ("wxEVENT_NC_MIDDLE_DCLICK" wxEVENT_NC_MIDDLE_DCLICK)
 :int)

(defcvar ("wxEVENT_NC_RIGHT_DCLICK" wxEVENT_NC_RIGHT_DCLICK)
 :int)

(defcvar ("wxEVENT_CHAR" wxEVENT_CHAR)
 :int)

(defcvar ("wxEVENT_CHAR_HOOK" wxEVENT_CHAR_HOOK)
 :int)

(defcvar ("wxEVENT_NAVIGATION_KEY" wxEVENT_NAVIGATION_KEY)
 :int)

(defcvar ("wxEVENT_KEY_DOWN" wxEVENT_KEY_DOWN)
 :int)

(defcvar ("wxEVENT_KEY_UP" wxEVENT_KEY_UP)
 :int)

(defcvar ("wxEVENT_SET_CURSOR" wxEVENT_SET_CURSOR)
 :int)

(defcvar ("wxEVENT_SCROLL_TOP" wxEVENT_SCROLL_TOP)
 :int)

(defcvar ("wxEVENT_SCROLL_BOTTOM" wxEVENT_SCROLL_BOTTOM)
 :int)

(defcvar ("wxEVENT_SCROLL_LINEUP" wxEVENT_SCROLL_LINEUP)
 :int)

(defcvar ("wxEVENT_SCROLL_LINEDOWN" wxEVENT_SCROLL_LINEDOWN)
 :int)

(defcvar ("wxEVENT_SCROLL_PAGEUP" wxEVENT_SCROLL_PAGEUP)
 :int)

(defcvar ("wxEVENT_SCROLL_PAGEDOWN" wxEVENT_SCROLL_PAGEDOWN)
 :int)

(defcvar ("wxEVENT_SCROLL_THUMBTRACK" wxEVENT_SCROLL_THUMBTRACK)
 :int)

(defcvar ("wxEVENT_SCROLL_THUMBRELEASE" wxEVENT_SCROLL_THUMBRELEASE)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_TOP" wxEVENT_SCROLLWIN_TOP)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_BOTTOM" wxEVENT_SCROLLWIN_BOTTOM)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_LINEUP" wxEVENT_SCROLLWIN_LINEUP)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_LINEDOWN" wxEVENT_SCROLLWIN_LINEDOWN)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_PAGEUP" wxEVENT_SCROLLWIN_PAGEUP)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_PAGEDOWN" wxEVENT_SCROLLWIN_PAGEDOWN)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_THUMBTRACK" wxEVENT_SCROLLWIN_THUMBTRACK)
 :int)

(defcvar ("wxEVENT_SCROLLWIN_THUMBRELEASE" wxEVENT_SCROLLWIN_THUMBRELEASE)
 :int)

(defcvar ("wxEVENT_SIZE" wxEVENT_SIZE)
 :int)

(defcvar ("wxEVENT_MOVE" wxEVENT_MOVE)
 :int)

(defcvar ("wxEVENT_CLOSE_WINDOW" wxEVENT_CLOSE_WINDOW)
 :int)

(defcvar ("wxEVENT_END_SESSION" wxEVENT_END_SESSION)
 :int)

(defcvar ("wxEVENT_QUERY_END_SESSION" wxEVENT_QUERY_END_SESSION)
 :int)

(defcvar ("wxEVENT_ACTIVATE_APP" wxEVENT_ACTIVATE_APP)
 :int)

(defcvar ("wxEVENT_POWER" wxEVENT_POWER)
 :int)

(defcvar ("wxEVENT_ACTIVATE" wxEVENT_ACTIVATE)
 :int)

(defcvar ("wxEVENT_CREATE" wxEVENT_CREATE)
 :int)

(defcvar ("wxEVENT_DESTROY" wxEVENT_DESTROY)
 :int)

(defcvar ("wxEVENT_SHOW" wxEVENT_SHOW)
 :int)

(defcvar ("wxEVENT_ICONIZE" wxEVENT_ICONIZE)
 :int)

(defcvar ("wxEVENT_MAXIMIZE" wxEVENT_MAXIMIZE)
 :int)

(defcvar ("wxEVENT_MOUSE_CAPTURE_CHANGED" wxEVENT_MOUSE_CAPTURE_CHANGED)
 :int)

(defcvar ("wxEVENT_PAINT" wxEVENT_PAINT)
 :int)

(defcvar ("wxEVENT_ERASE_BACKGROUND" wxEVENT_ERASE_BACKGROUND)
 :int)

(defcvar ("wxEVENT_NC_PAINT" wxEVENT_NC_PAINT)
 :int)

(defcvar ("wxEVENT_PAINT_ICON" wxEVENT_PAINT_ICON)
 :int)

(defcvar ("wxEVENT_MENU_HIGHLIGHT" wxEVENT_MENU_HIGHLIGHT)
 :int)

(defcvar ("wxEVENT_CONTEXT_MENU" wxEVENT_CONTEXT_MENU)
 :int)

(defcvar ("wxEVENT_SYS_COLOUR_CHANGED" wxEVENT_SYS_COLOUR_CHANGED)
 :int)

(defcvar ("wxEVENT_SETTING_CHANGED" wxEVENT_SETTING_CHANGED)
 :int)

(defcvar ("wxEVENT_QUERY_NEW_PALETTE" wxEVENT_QUERY_NEW_PALETTE)
 :int)

(defcvar ("wxEVENT_PALETTE_CHANGED" wxEVENT_PALETTE_CHANGED)
 :int)

(defcvar ("wxEVENT_JOY_BUTTON_DOWN" wxEVENT_JOY_BUTTON_DOWN)
 :int)

(defcvar ("wxEVENT_JOY_BUTTON_UP" wxEVENT_JOY_BUTTON_UP)
 :int)

(defcvar ("wxEVENT_JOY_MOVE" wxEVENT_JOY_MOVE)
 :int)

(defcvar ("wxEVENT_JOY_ZMOVE" wxEVENT_JOY_ZMOVE)
 :int)

(defcvar ("wxEVENT_DROP_FILES" wxEVENT_DROP_FILES)
 :int)

(defcvar ("wxEVENT_DRAW_ITEM" wxEVENT_DRAW_ITEM)
 :int)

(defcvar ("wxEVENT_MEASURE_ITEM" wxEVENT_MEASURE_ITEM)
 :int)

(defcvar ("wxEVENT_COMPARE_ITEM" wxEVENT_COMPARE_ITEM)
 :int)

(defcvar ("wxEVENT_INIT_DIALOG" wxEVENT_INIT_DIALOG)
 :int)

(defcvar ("wxEVENT_IDLE" wxEVENT_IDLE)
 :int)

(defcvar ("wxEVENT_UPDATE_UI" wxEVENT_UPDATE_UI)
 :int)

(defcvar ("wxEVENT_END_PROCESS" wxEVENT_END_PROCESS)
 :int)

(defcvar ("wxEVENT_DIALUP_CONNECTED" wxEVENT_DIALUP_CONNECTED)
 :int)

(defcvar ("wxEVENT_DIALUP_DISCONNECTED" wxEVENT_DIALUP_DISCONNECTED)
 :int)

(defcvar ("wxEVENT_COMMAND_LEFT_CLICK" wxEVENT_COMMAND_LEFT_CLICK)
 :int)

(defcvar ("wxEVENT_COMMAND_LEFT_DCLICK" wxEVENT_COMMAND_LEFT_DCLICK)
 :int)

(defcvar ("wxEVENT_COMMAND_RIGHT_CLICK" wxEVENT_COMMAND_RIGHT_CLICK)
 :int)

(defcvar ("wxEVENT_COMMAND_RIGHT_DCLICK" wxEVENT_COMMAND_RIGHT_DCLICK)
 :int)

(defcvar ("wxEVENT_COMMAND_SET_FOCUS" wxEVENT_COMMAND_SET_FOCUS)
 :int)

(defcvar ("wxEVENT_COMMAND_KILL_FOCUS" wxEVENT_COMMAND_KILL_FOCUS)
 :int)

(defcvar ("wxEVENT_COMMAND_ENTER" wxEVENT_COMMAND_ENTER)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_BEGIN_DRAG" wxEVENT_COMMAND_TREE_BEGIN_DRAG)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_BEGIN_RDRAG" wxEVENT_COMMAND_TREE_BEGIN_RDRAG)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_BEGIN_LABEL_EDIT" wxEVENT_COMMAND_TREE_BEGIN_LABEL_EDIT)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_END_LABEL_EDIT" wxEVENT_COMMAND_TREE_END_LABEL_EDIT)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_DELETE_ITEM" wxEVENT_COMMAND_TREE_DELETE_ITEM)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_GET_INFO" wxEVENT_COMMAND_TREE_GET_INFO)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_SET_INFO" wxEVENT_COMMAND_TREE_SET_INFO)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_ITEM_EXPANDED" wxEVENT_COMMAND_TREE_ITEM_EXPANDED)
 :int)

(defcvar ("wxEVENT_COMMAND_TREE_ITEM_EXPANDING" wxEVENT_COMMAND_TREE_ITEM_EXPANDING)
 :int)
